# WayfinderRouter

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EXPLAINER.md  LICENSE  Makefile  NOTICE  README.md  RELEASE.md  SECURITY.md  conftest.py  docker-compose.example.yml  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.rac/: config.yaml
benchmarks/: README.md  __init__.py  ai4privacy-validation-results.json  ai4privacy-validation-results.md  ai4privacy_validation.py  blind-eval.md  blind_eval.py  calibration-eval.md  dataset.jsonl  detector-corpus.jsonl  detector-validation-results.json  detector-validation-results.md  detector-validation.md  detector_corpus.py  detector_validation.py  detectors.py  gitleaks-crosscheck-results.md  gitleaks_crosscheck.py  harness.py  judge-external-results.md  judge-validation-results.json  judge-validation-results.md  judge-validation.md  judge_external.py  judge_validation.py  mine_lexicon.py  results.md  routerarena_adapter.py  routerbench-results.md  routerbench_adapter.py  routerbench_calibrate.py  routerbench_lexical.py  routers.py  run.py  split.py
clients/desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/icons/: icon.icns
clients/desktop/src-tauri/src/: commands.rs  keychain.rs  lib.rs  main.rs  service.rs  tray.rs
decisions/: WF-ADR-0001-standalone-deterministic-router.md  WF-ADR-0002-tiered-routing.md  WF-ADR-0003-calibration-and-classifier.md  WF-ADR-0004-invocation-and-gateway.md  WF-ADR-0005-calibration-explain-ui.md  WF-ADR-0006-feedback-and-onboarding.md  WF-ADR-0007-scheduled-recalibration.md  WF-ADR-0008-packaging-and-integration.md  WF-ADR-0009-license-apache-2.md  WF-ADR-0010-turnkey-chat-fork.md  WF-ADR-0011-per-request-routing-override.md  WF-ADR-0012-model-discovery-endpoint.md  WF-ADR-0013-streaming-and-gateway-hardening.md  WF-ADR-0014-routing-visibility-surface.md  WF-ADR-0015-benchmark-methodology.md  WF-ADR-0016-lexical-difficulty-signals.md  WF-ADR-0017-cost-aware-routing.md  WF-ADR-0018-gateway-metrics-endpoint.md  WF-ADR-0019-configurable-lexicon.md  WF-ADR-0020-decision-first-demo-ui.md  WF-ADR-0021-multi-turn-routing-scope.md  WF-ADR-0022-conversation-latch.md  WF-ADR-0023-in-demo-scoring-overrides.md  WF-ADR-0024-stock-lexicon-profiles.md  WF-ADR-0025-models-key-status-surface.md  WF-ADR-0026-conversation-threads.md  WF-ADR-0027-native-desktop-window.md  WF-ADR-0028-standalone-binary-packaging.md  WF-ADR-0029-tui-in-default-install.md  WF-ADR-0030-tui-thread-persistence.md  WF-ADR-0031-gateway-failover-policy.md  WF-ADR-0032-gateway-spend-budgets.md  WF-ADR-0033-exact-match-response-cache.md  WF-ADR-0034-gateway-rate-limiting.md  WF-ADR-0035-gateway-virtual-keys.md  WF-ADR-0036-slash-routing-directives.md  WF-ADR-0037-automated-sufficiency-judge.md  WF-ADR-0038-local-service-surface.md  WF-ADR-0039-offline-first-delivery.md  WF-ADR-0041-ink-terminal-client.md  (+14 more)
design/: demo.html
designs/: WF-DESIGN-0001-terminal-chat-ui.md  WF-DESIGN-0002-static-serverless-demo.md  WF-DESIGN-0003-decision-confidence-abstention.md  WF-DESIGN-0004-calibration-loop.md  WF-DESIGN-0005-structural-feature-audit.md  WF-DESIGN-0006-key-experience.md  WF-DESIGN-0007-savings-report-counterfactual.md  WF-DESIGN-0008-gateway-observability-cost-dashboard.md  WF-DESIGN-0009-integration-recipes-and-compatibility.md  (+12 more)
rust/: Cargo.toml  README.md  deny.toml
rust/benchmarks/: decision_benchmark.py
rust/crates/wayfinder-apple-ffi/: Cargo.toml  uniffi.toml
rust/crates/wayfinder-apple-ffi/src/: lib.rs
rust/crates/wayfinder-apple-foundation-xpc/: Cargo.toml  build.rs
rust/crates/wayfinder-apple-foundation-xpc/src/: lib.rs  xpc_bridge.m
rust/crates/wayfinder-cli/: Cargo.toml
rust/crates/wayfinder-cli/src/: app_setup_command.rs  apple_foundation_live.rs  codex_app_server.rs  config_command.rs  lib.rs  main.rs  service_command.rs
rust/crates/wayfinder-cli/tests/: delegation_parity.rs
rust/crates/wayfinder-codex-app-server/: Cargo.toml
rust/crates/wayfinder-codex-app-server/src/: lib.rs  process.rs  protocol.rs
rust/crates/wayfinder-codex-app-server/tests/: protocol.rs
rust/crates/wayfinder-compat-tests/: Cargo.toml  differential_route_fuzz.py  generate_config_vectors.py  generate_gateway_config_vectors.py  generate_gateway_http_vectors.py  generate_routing_vectors.py  generate_service_unit_vectors.py  subprocess_http.py
rust/crates/wayfinder-compat-tests/fixtures/: gateway-config.json  gateway-http.json  python-golden.json  routing-boundaries.json  routing-config.json  service-units.json
rust/crates/wayfinder-compat-tests/src/: lib.rs
rust/crates/wayfinder-compat-tests/tests/: config_parity.rs  embedded_gateway_parity.rs  fixture_contract.rs  gateway_config_parity.rs  gateway_http_parity.rs  routing_parity.rs  service_unit_parity.rs
rust/crates/wayfinder-config/: Cargo.toml
rust/crates/wayfinder-config/src/: gateway.rs  lib.rs
rust/crates/wayfinder-core/: Cargo.toml
rust/crates/wayfinder-core/src/: lib.rs  profiles.rs
rust/crates/wayfinder-gateway/: Cargo.toml
rust/crates/wayfinder-gateway/src/: access.rs  auth.rs  budget.rs  cache.rs  codex_control.rs  decision_policy.rs  delivery.rs  lib.rs  metrics.rs  rate_limit.rs  recent.rs  reliability.rs  reload.rs  server.rs
rust/crates/wayfinder-macos-xpc/: Cargo.toml  build.rs
rust/crates/wayfinder-macos-xpc/src/: lib.rs  xpc_bridge.m
rust/crates/wayfinder-providers/: Cargo.toml
rust/crates/wayfinder-providers/src/: anthropic.rs  lib.rs  openai_compat.rs  reliability.rs  sse.rs
rust/crates/wayfinder-routing-core/: Cargo.toml  README.md
rust/crates/wayfinder-routing-core/src/: lib.rs  profiles.rs
rust/crates/wayfinder-routing-core/tests/: dependency_boundary.rs
rust/crates/wayfinder-runtime-contracts/: Cargo.toml
rust/crates/wayfinder-runtime-contracts/src/: lib.rs
rust/crates/wayfinder-service/: Cargo.toml
rust/crates/wayfinder-service/src/: credentials.rs  lib.rs  pricing.rs  units.rs
(+378 files in other folders)
