[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wayfinder-router"
dynamic = ["version"]
description = "A deterministic prompt-complexity router: score a prompt's structure and recommend a local or cloud model — offline, reproducible, no model call."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Tom Ballard", email = "tom@armytage.co" }]
keywords = [
    "llm",
    "llm-routing",
    "model-routing",
    "prompt-routing",
    "prompt-complexity",
    "openai-compatible",
    "ai-gateway",
    "local-llm",
    "inference",
    "cost-optimization",
    "deterministic",
    "ollama",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
# Stdlib-only: scoring is pure text scanning and config is tomllib. Wayfinder has
# no runtime dependency on RAC or anything else (WF-ADR-0001).
dependencies = []

[project.urls]
Homepage = "https://github.com/itsthelore/wayfinder-router"
Repository = "https://github.com/itsthelore/wayfinder-router"
Issues = "https://github.com/itsthelore/wayfinder-router/issues"

[project.optional-dependencies]
# The OpenAI-compatible routing gateway (WF-ADR-0004). The core never imports
# these; they are loaded lazily only when the gateway runs.
gateway = ["fastapi>=0.110", "uvicorn>=0.27", "httpx>=0.27"]
# The local calibration/explain/configure UI (WF-ADR-0005); lazily imported.
ui = ["fastapi>=0.110", "uvicorn>=0.27"]
# The terminal chat UI (WF-DESIGN-0001); rich is imported lazily only when `tui` runs.
tui = ["rich>=13"]
# Convenience: the gateway, the UI, and the terminal UI together. Self-references the
# extras so it stays in sync with them.
all = ["wayfinder-router[gateway,ui,tui]"]
# Test runner; includes fastapi + httpx + rich so the gateway, UI, and TUI are exercised in CI.
dev = ["pytest>=7", "fastapi>=0.110", "httpx>=0.27", "rich>=13"]

[project.scripts]
wayfinder-router = "wayfinder_router.cli:main"

[tool.setuptools]
packages = ["wayfinder_router"]

[tool.setuptools.dynamic]
version = { attr = "wayfinder_router.__version__" }

[tool.setuptools.package-data]
# demo.html is the canonical /demo UI (WF-ADR-0020); mascot.ans is the terminal
# mascot art (WF-DESIGN-0001). Both are loaded via importlib.resources.
wayfinder_router = ["py.typed", "demo.html", "mascot.ans"]

[tool.pytest.ini_options]
testpaths = ["tests"]
