[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wayfinder-router"
dynamic = ["version"]
description = "A deterministic prompt-complexity router: score a prompt's structure and recommend a local or cloud model — offline, reproducible, no model call."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Tom Ballard", email = "tom@armytage.co" }]
keywords = [
    "llm",
    "llm-routing",
    "model-routing",
    "prompt-routing",
    "prompt-complexity",
    "openai-compatible",
    "ai-gateway",
    "local-llm",
    "inference",
    "cost-optimization",
    "deterministic",
    "ollama",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
# The scorer/router and config are stdlib-only (pure text scanning + tomllib) and
# never import these (WF-ADR-0001 — independence, incl. zero dependency on RAC). The
# terminal chat ships in the default install (WF-ADR-0029) so `wayfinder-router chat`
# works out of the box; rich/textual are imported lazily, so embedding the library
# (`import wayfinder_router`) still loads nothing extra.
dependencies = ["rich>=13", "textual>=0.60"]

[project.urls]
Homepage = "https://github.com/itsthelore/wayfinder-router"
Repository = "https://github.com/itsthelore/wayfinder-router"
Issues = "https://github.com/itsthelore/wayfinder-router/issues"

[project.optional-dependencies]
# The OpenAI-compatible routing gateway (WF-ADR-0004). The core never imports
# these; they are loaded lazily only when the gateway runs.
gateway = ["fastapi>=0.110", "uvicorn>=0.27", "httpx>=0.27"]
# The local calibration/explain/configure UI (WF-ADR-0005); lazily imported.
ui = ["fastapi>=0.110", "uvicorn>=0.27"]
# The terminal chat UI (WF-DESIGN-0001) now ships by default (WF-ADR-0029); this extra
# is kept as a no-op alias so `pip install "wayfinder-router[tui]"` keeps working.
tui = []
# Convenience: the gateway and the local UI on top of the default install (which
# already includes the terminal chat).
all = ["wayfinder-router[gateway,ui]"]
# Test runner; fastapi + httpx exercise the gateway and UI (rich + textual are core deps).
dev = ["pytest>=7", "fastapi>=0.110", "httpx>=0.27"]

[project.scripts]
wayfinder-router = "wayfinder_router.cli:main"

[tool.setuptools]
packages = ["wayfinder_router"]

[tool.setuptools.dynamic]
version = { attr = "wayfinder_router.__version__" }

[tool.setuptools.package-data]
# demo.html is the canonical /demo UI (WF-ADR-0020), loaded via importlib.resources.
wayfinder_router = ["py.typed", "demo.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
