[workspace]
resolver = "3"
members = [
    "crates/wayfinder-routing-core",
    "crates/wayfinder-runtime-contracts",
    "crates/wayfinder-config",
    "crates/wayfinder-providers",
    "crates/wayfinder-gateway",
    "crates/wayfinder-service",
    "crates/wayfinder-macos-xpc",
    "crates/wayfinder-apple-foundation-xpc",
    "crates/wayfinder-codex-app-server",
    "crates/wayfinder-cli",
    "crates/wayfinder-compat-tests",
]

[workspace.package]
version = "2026.7.0"
edition = "2024"
rust-version = "1.85"
authors = ["Tom Ballard <tom@armytage.co>"]
license = "Apache-2.0"
repository = "https://github.com/itsthelore/wayfinder-router"

[workspace.dependencies]
axum = { version = "=0.8.9", default-features = false, features = ["http1", "json", "tokio", "tracing"] }
bytes = "1.12.0"
cc = "1.2.65"
futures-util = "0.3.32"
http = "1.4.2"
http-body-util = "0.1.3"
indexmap = "2.14.0"
regex = "1.12.4"
reqwest = { version = "=0.13.4", default-features = false, features = ["json", "rustls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["arbitrary_precision", "preserve_order"] }
sha2 = "=0.11.0"
subtle = "=2.6.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "test-util", "time"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
toml = { version = "1.1.2", features = ["preserve_order"] }
toml_edit = { version = "0.25.12", features = ["serde"] }
tower = { version = "0.5.3", features = ["limit", "timeout", "util"] }
tower-http = { version = "0.6.11", features = ["limit", "request-id", "timeout", "trace"] }
tracing = "0.1.44"
uuid = { version = "1.23.4", features = ["v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
