[package]
name = "wayfinder-desktop"
version = "0.1.0"
description = "Wayfinder Desktop — Tauri v2 macOS menu-bar app (WF-ADR-0042)"
authors = ["Tom Ballard <tom@armytage.co>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "wayfinder_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-autostart = "2.5.1"
libc = "0.2.186"
tauri-plugin-positioner = { version = "2.3.2", features = ["tray-icon"] }
window-vibrancy = "0.7.1"
tokio = { version = "1.52.3", features = ["time", "rt", "rt-multi-thread", "macros", "process"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json"] }
