[package]
name = "wayfinder-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
indexmap.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
toml_edit.workspace = true
wayfinder-routing-core = { path = "../wayfinder-routing-core" }

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
