[package]
name = "wayfinder-macos-xpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
wayfinder-providers = { path = "../wayfinder-providers" }

[build-dependencies]
cc.workspace = true

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
