[package]
name = "wayfinder-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes.workspace = true
futures-util.workspace = true
http.workspace = true
reqwest.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wayfinder-core = { path = "../wayfinder-core" }

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
