[package]
name = "wayfinder-routing-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
regex.workspace = true
serde.workspace = true
thiserror.workspace = true
wayfinder-runtime-contracts = { path = "../wayfinder-runtime-contracts" }

[dev-dependencies]
serde_json.workspace = true
toml.workspace = true

[lints]
workspace = true
