[package]
name = "wayfinder-runtime-contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
